--- a/Poker/Makefile
+++ b/Poker/Makefile
@@ -6,7 +6,7 @@ CC = g++
 
 #COMPILER_FLAGS specifies the additional compilation options we're using
 # -w suppresses all warnings
-COMPILER_FLAGS = -w -std=c++14
+COMPILER_FLAGS = -w -g -std=c++14
 
 #LINKER_FLAGS specifies the libraries we're linking against
 LINKER_FLAGS = 
